--- a/index.html
+++ b/index.html
@@ -2,67 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/penguin.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Portfolio</title>
+    <title>bradley</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap"
       rel="stylesheet"
     />
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-      rel="stylesheet"
-    />
-  
-    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    <header></header>
-    <div class="homepage">
-      <div>
-        <div class="greet">
-          <h1 class="greeting">
-            Howdy! <img src="images/technologist.png" alt="Logo" width="100" />
-          </h1>
-          <h1 class="name">My name is Bradley.</h1>
-          <p class="passion">
-            I am graduating with my BSc in Computer Science at the University of
-            Ottawa (3.9/4.0 CGPA) on May 2025. Solving intricate problems with focus and precision is my passion.
-          </p>
-          <p>
-            bradley121901@gmail.com | +1 438 860 0415
-          </p>
-        </div>
-        <div class="direct">
-        <a href="experience.html">
-          <p>Professional Experience</p>
-        </a>
-
-        <a href="ai-cat-toy.html">
-          <p>Intelligent Cat Laser Toy w/RaspberryPi + Python + Tensorflow</p>
-        </a>
-
-        <a href="llm-watermarking.html">
-          <p>LLM Watermarking Expansion Research</p>
-        </a>
-
-        <a href="https://github.com/bradley121901">
-          <p>Projects/Github (Full stack web/mobile, ML model implementations, ETL data anaylsis)</p>
-        </a>
-      </div>
-
-
-
- 
-      </div>
-  </div>
-
-          
-    </div>
-    <script src="script.js"></script>
-    </body>
-    </html>
-
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
